--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,6 +4,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings":{
+      "CostEstimatorEfCoreContext":"server=127.0.0.1;uid=root;pwd=icanwin12#;database=CostEstimator"
     }
   }
 }
