--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,37 @@ bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.CSharp.Workspaces.resources.dll
 bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.resources.dll
 bin/Debug/net8.0/zh-Hant/Microsoft.CodeAnalysis.Workspaces.resources.dll
 obj/Debug/net8.0/CostEstimator.AssemblyInfoInputs.cache
+bin/Debug/net8.0/appsettings.Development.json
+bin/Debug/net8.0/appsettings.json
+bin/Debug/net8.0/CostEstimator
+bin/Debug/net8.0/CostEstimator.deps.json
+bin/Debug/net8.0/CostEstimator.dll
+bin/Debug/net8.0/CostEstimator.pdb
+bin/Debug/net8.0/CostEstimator.runtimeconfig.json
+bin/Debug/net8.0/CostEstimator.staticwebassets.runtime.json
+obj/Debug/net8.0/CostEstimator.AssemblyInfo.cs
+obj/Debug/net8.0/CostEstimator.AssemblyInfoInputs.cache
+obj/Debug/net8.0/CostEstimator.assets.cache
+obj/Debug/net8.0/CostEstimator.csproj.CopyComplete
+obj/Debug/net8.0/CostEstimator.csproj.CoreCompileInputs.cache
+obj/Debug/net8.0/CostEstimator.csproj.FileListAbsolute.txt
+obj/Debug/net8.0/CostEstimator.dll
+obj/Debug/net8.0/CostEstimator.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net8.0/CostEstimator.genruntimeconfig.cache
+obj/Debug/net8.0/CostEstimator.MvcApplicationPartsAssemblyInfo.cache
+obj/Debug/net8.0/CostEstimator.pdb
+obj/Debug/net8.0/CostEstimator.RazorAssemblyInfo.cache
+obj/Debug/net8.0/CostEstimator.RazorAssemblyInfo.cs
+obj/Debug/net8.0/CostEstimator.sourcelink.json
+obj/Debug/net8.0/staticwebassets.build.json
+obj/Debug/net8.0/staticwebassets.development.json
+obj/Debug/net8.0/staticwebassets.pack.json
+obj/Debug/net8.0/ref/CostEstimator.dll
+obj/Debug/net8.0/refint/CostEstimator.dll
+obj/Debug/net8.0/scopedcss/bundle/CostEstimator.styles.css
+obj/Debug/net8.0/scopedcss/Pages/Shared/_Layout.cshtml.rz.scp.css
+obj/Debug/net8.0/scopedcss/projectbundle/CostEstimator.bundle.scp.css
+obj/Debug/net8.0/staticwebassets/msbuild.build.CostEstimator.props
+obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.CostEstimator.props
+obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.CostEstimator.props
+obj/Debug/net8.0/staticwebassets/msbuild.CostEstimator.Microsoft.AspNetCore.StaticWebAssets.props
