--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,29 @@ obj/Debug/net8.0/staticwebassets/msbuild.build.CostEstimator.props
 obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.CostEstimator.props
 obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.CostEstimator.props
 obj/Debug/net8.0/staticwebassets/msbuild.CostEstimator.Microsoft.AspNetCore.StaticWebAssets.props
+bin/Debug/net8.0/BouncyCastle.Crypto.dll
+bin/Debug/net8.0/Google.Protobuf.dll
+bin/Debug/net8.0/K4os.Compression.LZ4.dll
+bin/Debug/net8.0/K4os.Compression.LZ4.Streams.dll
+bin/Debug/net8.0/K4os.Hash.xxHash.dll
+bin/Debug/net8.0/Microsoft.Win32.SystemEvents.dll
+bin/Debug/net8.0/MySql.Data.dll
+bin/Debug/net8.0/MySql.Data.EntityFrameworkCore.dll
+bin/Debug/net8.0/Renci.SshNet.dll
+bin/Debug/net8.0/SshNet.Security.Cryptography.dll
+bin/Debug/net8.0/System.Configuration.ConfigurationManager.dll
+bin/Debug/net8.0/System.Drawing.Common.dll
+bin/Debug/net8.0/System.Security.Cryptography.ProtectedData.dll
+bin/Debug/net8.0/System.Security.Permissions.dll
+bin/Debug/net8.0/System.Windows.Extensions.dll
+bin/Debug/net8.0/System.Xml.XPath.XmlDocument.dll
+bin/Debug/net8.0/Ubiety.Dns.Core.dll
+bin/Debug/net8.0/Zstandard.Net.dll
+bin/Debug/net8.0/runtimes/unix/lib/netcoreapp3.0/System.Drawing.Common.dll
+bin/Debug/net8.0/runtimes/win/lib/netcoreapp3.0/Microsoft.Win32.SystemEvents.dll
+bin/Debug/net8.0/runtimes/win/lib/netcoreapp3.0/System.Drawing.Common.dll
+bin/Debug/net8.0/runtimes/win/lib/netcoreapp3.0/System.Windows.Extensions.dll
+bin/Debug/net8.0/runtimes/win/lib/netstandard2.0/System.Security.Cryptography.ProtectedData.dll
+obj/Debug/net8.0/CostEstimator.assets.cache
+obj/Debug/net8.0/CostEstimator.csproj.AssemblyReference.cache
+obj/Debug/net8.0/CostEstimator.csproj.FileListAbsolute.txt
