--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":""
+    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=icanwin12#;database=CostEstimator"
   }
 }
