--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ bin/Debug/net8.0/runtimes/win/lib/netstandard2.0/System.Security.Cryptography.Pr
 obj/Debug/net8.0/CostEstimator.assets.cache
 obj/Debug/net8.0/CostEstimator.csproj.AssemblyReference.cache
 obj/Debug/net8.0/CostEstimator.csproj.FileListAbsolute.txt
+obj/Debug/net8.0/CostEstimator.assets.cache
+bin/Debug/net8.0/dotnet-ef.dll
+bin/Debug/net8.0/Newtonsoft.Json.dll
