1. Moved DBContext reference up in the program.cs (before the builder.build method) 2. Generated Migrations for initiating database 3. Changed the package MySql.Data.EFCore to MySql.EFCore. 4. Changed the version from 8.0.22 to 7.0.0 5. Added some files to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ obj/Debug/net8.0/CostEstimator.csproj.FileListAbsolute.txt
 obj/Debug/net8.0/CostEstimator.assets.cache
 bin/Debug/net8.0/dotnet-ef.dll
 bin/Debug/net8.0/Newtonsoft.Json.dll
+obj/Debug/net8.0/CostEstimator.assets.cache
